@@ -23,23 +23,23 @@ test_that("Check position of reference", {
   b <- printCrudeAndAdjustedModel(tmp, add_references=TRUE)
   
   expect_equal(a, b)
-    # Getting the name wrong should not change the reference
-    a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, 
-                                    add_references_pos=list(a=3))
-    expect_match(a[1,2], "ref")
-    
-    # This should move the reference
-    a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=2))
-    expect_match(a[2,2], "ref")
-    
-    # Should end up at first position if referenced outside
-    a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=5))
-    expect_match(a[1,2], "ref")
-    
-    # Should end up at first position if referenced outside
-    a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=-5))
-    expect_match(a[1,2], "ref")
-  })
+  # Getting the name wrong should not change the reference
+  a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, 
+                                  add_references_pos=list(a=3))
+  expect_match(a[1,2], "ref")
+  
+  # This should move the reference
+  a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=2))
+  expect_match(a[2,2], "ref")
+  
+  # Should end up at first position if referenced outside
+  a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=5))
+  expect_match(a[1,2], "ref")
+  
+  # Should end up at first position if referenced outside
+  a <- printCrudeAndAdjustedModel(fit, add_references=TRUE, add_references_pos=list(x=-5))
+  expect_match(a[1,2], "ref")
+})
 
 
 
